--- a/my-react/src/index.css
+++ b/my-react/src/index.css
@@ -1,13 +1,25 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+  max-width: 600px;
+  margin: 2em auto;
+  text-align: center;
+}
+
+ul {
+  list-style: none;
+  padding: .5em 0;
+}
+
+nav li {
+  display: inline-block;
+  margin: 0 10px;
+}
+
+.book-list li {
+  margin: 10px 0;
 }
